--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,9 @@
 DB_HOST=127.0.0.1                       
 DB_DRIVER=postgres                          
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_PORT= 
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=db_presensi_device_address
+DB_PORT=5432
 
 API_SECRET=AKUSAYANGKAMUFOREVER
 TOKEN_HOUR_LIFESPAN=1 #Untuk satu jam
